# zap

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  setup.sh
docs/design/: architecture.md  configuration.md  keybindings.md  mvp-scope.md  overview.md  tech-stack.md  ui-layout.md
src/: app.rs  error.rs  event.rs  lib.rs  logging.rs  main.rs
src/config/: mod.rs
src/input/: mod.rs
src/matrix/: client.rs  contacts.rs  login.rs  messages.rs  mod.rs  rooms.rs  sync.rs
src/store/: mod.rs
src/ui/: compose_bar.rs  help_bar.rs  message_view.rs  mod.rs  room_list.rs  status_bar.rs  theme.rs
